fix for mobileapp alignment issue

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -1611,6 +1611,8 @@ ul {
 
 	.icon-texts {
         padding-bottom: 32px;
+        display: flex;
+        flex-direction: column;
 		p {
 			&:first-child {
 				font-weight: 700;
@@ -1618,7 +1620,6 @@ ul {
         }
         p:last-child{
             line-height:23px;
-            display:table;
         }
     }
     .icon-text {
